# finVizulizer

./: .gitignore  Dockerfile  README.md  financial_data.py  main.py  pyproject.toml
.circleci/: config.yml
docs/: architecture.puml
finVizulizer/: database.py  database_wrapper.py  main.py  parse_table.py  request_wrapper.py  sentiment_wrapper.py  setup_logger.py
tests/features/: main.feature
tests/helpers/: config.py  finviz_page.html  finviz_table.html  parsenews.json  sentiment_scores.json
tests/step_definitions/: conftest.py  test_main.py
tests/unit_tests/: test_database.py  test_database_wrapper.py  test_parse_table.py  test_request_wrapper.py  test_sentiment_wrapper.py
