[tool.poetry]
name = "finVizulizer"
version = "0.1.0"
description = ""
authors = ["Matt Squire <mhsquire83@gmail.com>"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "^3.8"
pytest-bdd = "^5.0.0"
pandas = "^1.4.2"
matplotlib = "^3.5.2"
nltk = "^3.7"
pytest = "^7.1.2"
requests = "^2.28.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
